--- a/phase-1.ipynb
+++ b/phase-1.ipynb
@@ -157,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Vector, Matrices, Tensom"
+    "### Vector, Matrices, Tensor"
    ]
   },
   {
